Fix for tall images overflowing on single product page.

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -739,7 +739,7 @@ div[role="main"] {
             display: block;
             margin: 0;
             position: absolute;
-            bottom: -50px;
+            bottom: -45px;
             width: 100%;
 
             // Restrict Width of Pagination
